name:                PrabhtajAssembler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/PrabhtajAssembler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , word8
                     , bytestring
                     , hex
                     , mtl
                     , split
                     , process
  default-language:    Haskell2010

executable PrabhtajAssembler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PrabhtajAssembler
                     , text
                     , cereal
                     , microlens
                     , containers
  default-language:    Haskell2010

test-suite PrabhtajAssembler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , PrabhtajAssembler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/PrabhtajAssembler
